--- a/multi_color.cfg
+++ b/multi_color.cfg
@@ -5,6 +5,8 @@
 # - https://github.com/gwisp2/klipper-drawbot
 ## Issues with Compiling for arduino?
 ## - https://github.com/Klipper3d/klipper/issues/4938#issuecomment-1094246978 (adding an older version of avr works)
+
+# add a variables.cfg file to your config folder this will save any variables you need
 [save_variables]
 filename: /home/biqu/printer_data/config/variables.cfg
 
@@ -72,39 +74,103 @@ gcode:
 
 [gcode_macro UNLOAD_COLOR]
 gcode:
-  {% set distance = params.DISTANCE | default(200) | int %}
+  {% set distance = params.DISTANCE | default(175) | int %}
+  {% set number_of_times = (distance / 50)|round|int %}
+  {% set remainder = distance % 50 | int %}
   G91
   G4 S2
-  G0 E-{distance} F2000
+  {% for i in range(number_of_times) %}
+    G0 E-50 F2000
+  {% endfor %}
+  {% if remainder > 0 %}
+    G0 E-{remainder} F2000
+  {% endif %}
   G90
 
 [gcode_macro LOAD_COLOR]
 gcode:
-  {% set distance = params.DISTANCE | default(200) | int %}
+  {% set distance = params.DISTANCE | default(175) | int %}
+  {% set number_of_times = (distance / 50)|round|int %}
+  {% set remainder = distance % 50 | int %}
   G91
   G4 S2
-  G0 E+{distance} F2000
+  {% for i in range(number_of_times) %}
+    G0 E+50 F2000
+  {% endfor %}
+  {% if remainder > 0 %}
+    G0 E+{remainder} F2000
+  {% endif %}
   G90
 
 [gcode_macro CHANGE_COLOR]
 gcode:
   {% set next_color = params.NEXT_COLOR | default(0) | int %}
-  {% set distance = params.DISTANCE | default(200) | int %}
   {% set svv = printer.save_variables.variables %}
   {% set active_tool = svv.active_tool | int %}
    
   # Compare previous color to current color and only do the load / unload if needed
   {% if active_tool != next_color %}
-    G0 X235 F2000; Park
-    G91
-    G4 S2
-    G0 E-{distance} F2000
+    PARK
+
+    {%if printer[printer.toolhead.extruder].target < 180 %}
+      M104 S220     ; set extruder temp
+      M109 S220     ; wait for extruder temp 
+    {% endif %}
+
+    TIP_SHAPE
+    
     G4 S2
     SET_COLOR COLOR={next_color}
     G4 S2
     G4 S2
-    G0 E+{distance} F2000
+    LOAD_COLOR
     G90
     G4 S2
   {% endif %}
 
+[gcode_macro TIP_SHAPE]
+gcode:
+  {% set currentTemp = printer[printer.toolhead.extruder].target %}
+
+  M109 S180; cool down to prevent swelling
+  M106 S255
+  G0 E20 F1500 ;
+  G0 E-5 F500 ;
+  M109 S165; cool down to prevent swelling
+  G0 E5 F1500 ;
+  G0 E-1 F500 ;
+  M109 S155; cool down to prevent swelling
+  G0 E1 F1500 ;
+  G0 E-25 F500 ;
+  M109 S150; cool down to prevent swelling
+  G0 E24 F1500 ; last tip dip with cold tip
+  G0 E-24 ; last tip dip with cold tip
+  M109 R180; go back to extruder temp
+  UNLOAD_COLOR DISTANCE=170
+  G92 E0
+  M109 S{currentTemp};
+
+[gcode_macro PARK]
+gcode:
+  {% if printer.toolhead.homed_axes != "xyz" %}
+      G28
+  {% endif %}
+  G90
+  G1 X180 Y0 F2000; Park
+  G91
+
+[gcode_macro T0]
+gcode:
+  CHANGE_COLOR
+
+[gcode_macro T1]
+gcode:
+  CHANGE_COLOR NEXT_COLOR=1
+
+[gcode_macro T2]
+gcode:
+  CHANGE_COLOR NEXT_COLOR=2
+
+[gcode_macro T3]
+gcode:
+  CHANGE_COLOR NEXT_COLOR=3
