--- a/multi_color_pi_pico.cfg
+++ b/multi_color_pi_pico.cfg
@@ -5,6 +5,8 @@
 # To set up canbus you would need an extra canbus transiever and a 5v buck converter to step down the 12-24v to 5 to power
 # both the pi pico and the transiever
 
+# This does work a little differently. It works with a 3dchameleon as the selector.
+
 [save_variables]
 filename: /home/mks/printer_data/config/variables.cfg
 
