--- a/multi_color_pi_pico.cfg
+++ b/multi_color_pi_pico.cfg
@@ -5,8 +5,6 @@
 # To set up canbus you would need an extra canbus transiever and a 5v buck converter to step down the 12-24v to 5 to power
 # both the pi pico and the transiever
 
-# This does work a little differently. It works with a 3dchameleon as the selector.
-
 [save_variables]
 filename: /home/mks/printer_data/config/variables.cfg
 
@@ -19,41 +17,49 @@ canbus_uuid:
 # ams:gpio10
 
 # Steppers
-[extruder_stepper advancer] # Y Stepper position
-extruder: extruder
+[extruder_stepper color_0] # Y Stepper position
+extruder:
 step_pin: ams:gpio9
 dir_pin: ams:gpio7
 enable_pin: !ams:gpio6
 microsteps: 16
-rotation_distance: 23.375543480731
+rotation_distance: 32.73885641559
 
 
-[manual_stepper selector] # X Stepper position
+[manual_stepper color_1] # X Stepper position
+extruder:
 step_pin: ams:gpio10
 dir_pin: !ams:gpio8
 enable_pin: !ams:gpio6
 microsteps: 16
-rotation_distance: 15.7
+rotation_distance: 32.73885641559
+
+# [extruder_stepper color_2]
+# extruder:
+# step_pin: ams:PD4
+# dir_pin: ams:PD7
+# enable_pin: !ams:PB0
+# microsteps: 16
+# rotation_distance: 32.73885641559
+
+# [extruder_stepper color_3]
+# extruder:
+# step_pin: ams:PB4
+# dir_pin: ams:PB5
+# enable_pin: !ams:PB0
+# microsteps: 16
+# rotation_distance: 32.73885641559
 
 # Add Save currnet color to variables and add set color on reboot with delayed gcode
 [delayed_gcode reset_active_extruder]
 initial_duration: 0.1
 gcode:
-  HOME_SELECTOR
   {% set svv = printer.save_variables.variables %}
   {% if svv.active_tool != "" %}
       SET_COLOR COLOR={ svv.active_tool }
-      {% if svv.active_tool == '3' or svv.active_tool == '4' %}
-        SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER="advancer" DISTANCE=-23.375543480731
-      {% endif %}
   {% else %}
       SET_COLOR COLOR=0
   {% endif %}
-  
-[gcode_macro HOME_SELECTOR]
-gcode:
-  MANUAL_STEPPER STEPPER=selector ENABLE=1 MOVE=-16
-  MANUAL_STEPPER STEPPER=selector SET_POSITION=0
     
 [gcode_macro SET_COLOR]
 gcode:
@@ -62,29 +68,13 @@ gcode:
   M117 Custom AMS Tool T{color}
   
   # SYNC_EXTRUDER_MOTION EXTRUDER="extruder" MOTION_QUEUE='' # Uncomment if you want to turn of your main extruder
-  SYNC_EXTRUDER_MOTION EXTRUDER="advancer" MOTION_QUEUE='extruder'
-
-  {% set degree = 1 %}
-  {% set direction = 1 %}
-  {% set rotate_distance = 23.375543480731 %}
-
-  {% if color == 1 %}
-    {% set degree = 4.8 %}
-  {% elif color == 2 %}
-    {% set direction = -1 %}
-    {% set degree = 9.5 %}
-  {% elif color == 3 %}
-    {% set direction = -1 %}
-    {% set degree = 12.5 %}
-  {% else%}
-    {% set degree = 1 %}
-    {% set direction = 1 %}
-  {% endif %}
-
-  MANUAL_STEPPER STEPPER=selector MOVE={degree}
-  SET_EXTRUDER_ROTATION_DISTANCE EXTRUDER="advancer" DISTANCE={rotate_distance * direction}
-
+  SYNC_EXTRUDER_MOTION EXTRUDER="color_0" MOTION_QUEUE=''
+  SYNC_EXTRUDER_MOTION EXTRUDER="color_1" MOTION_QUEUE=''
+  SYNC_EXTRUDER_MOTION EXTRUDER="color_2" MOTION_QUEUE=''
+  SYNC_EXTRUDER_MOTION EXTRUDER="color_3" MOTION_QUEUE=''
+  SYNC_EXTRUDER_MOTION EXTRUDER="color_{color}" MOTION_QUEUE='extruder'
   SAVE_VARIABLE VARIABLE=active_tool VALUE={color}
+
 
 [gcode_macro UNLOAD_COLOR]
 gcode:
